# Aly

./: .plan.txt  ANALISE.md  Cargo.toml  FALTA.md  LICENSE  README.md  TODO.md  build.rs  readme.md
__tests__/: bool.aly  compound_assign.aly  compound_assign_test.aly  const.aly  input.aly  object.aly  teste.aly  tomb.aly  vector.aly
__tests__/control-flow/: async_try.aly  fun.aly  if.aly  loop.aly  match.aly
__tests__/core/: math.aly  object.aly  test_float_const.aly  tomb.aly  vector.aly
__tests__/gui/: style.css  test_window.aly
__tests__/http/: README.md  basic_server.aly  http_test.aly  middleware.aly  rest_api.aly  static_server.aly
__tests__/module-system/: main.aly  main2.aly  main3.aly  main4.aly
__tests__/modules/: greetings.aly  lib.aly  test_export.aly  (+3 more)
doc/: 01-getting-started.md  02-syntax.md  03-variables.md  04-types.md  05-operators.md  06-strings.md  07-control-flow.md  08-functions.md  09-objects-and-vectors.md  10-modules.md  11-stdlib.md  12-crypto.md  13-regex.md  14-datetime.md  15-codec.md  16-uuid.md  17-console.md  18-gzip.md  19-csv.md  20-http_api.md  21-net.md  22-path.md  23-dotenv.md  24-http.md  25-math.md  26-continuacao-de-linha.md  27-semantica-de-ponto-e-virgula.md  README.md
editor/: extension.js  language-configuration.json  package.json
examples/: hello.aly  loop.aly  tutorial.md
scratch/: eval_test.rs  test_loops.rs
src/: aly.rs  error.rs  lexer.rs  lib.rs  main.rs  math_eval.rs  schema.rs  tokens.rs
tests/: error_handling.rs  interpreter_basic.rs  interpreter_integration.rs  interpreter_unit.rs
(+71 files in other folders)
