[package]
name = "Aly"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
hex = "0.4"
sha2 = "0.10"
regex = "1.3.9"
clap = { version = "4", features = ["derive"] }
git2 = "0.18"
crossterm = "0.28.1"
eval = "^0.4"
linked-hash-map = "0.5.4"
once_cell = "1.19"
fltk = { version = "1.4", features = ["fltk-bundled"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
md-5 = "0.10"
hmac = "0.12"
uuid = { version = "1", features = ["v4"] }
flate2 = "1"
csv = "1"
tungstenite = "0.24"
